Fixing background-layout issue.

--- a/css/styles.css
+++ b/css/styles.css
@@ -38,8 +38,8 @@ body {
   color: var(--color-blue-grayish);
   padding: 0 1rem;
   background: url(../images/bg-header-mobile.png);
+  background-size: 100vw;
   background-repeat: no-repeat;
-  background-size: 100%;
   position: relative;
 }
 
@@ -226,6 +226,7 @@ body .showcase-two {
   body {
     background: url(../images/bg-header-desktop.png);
     background-repeat: no-repeat;
+    background-size: 100vw;
   }
 
   .btn {
